--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1852,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### "
+    "omg, that was brutally difficult for some reason\n",
+    "\n",
+    "Confirmed offset between depth and nest_level\n",
+    "\n",
+    "if parent_id starts with 't3', the depth is always 0 and the nest_level is always 1\n",
+    " -- nest_level = depth + 1\n"
    ]
   },
   {
@@ -1860,14 +1865,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_median_depth_nest_value(df):\n",
+    "    '''\n",
+    "    if depth is not null, use it\n",
+    "    else if nest_level is not null use (nest_level-1)\n",
+    "    else use np.na\n",
+    "    \n",
+    "    returns df plus \n",
+    "    '''\n",
+    "\n",
+    "def combine_nestlevel_depth_fillna(series):\n",
+    "    '''\n",
+    "    if depth is not null, use it\n",
+    "    else if nest_level is not null use (nest_level-1)\n",
+    "    else use 0 if parent_id starts with t3\n",
+    "    else use median value of depth and (nest_level-1) \n",
+    "    '''\n",
+    "    median_depth = np.median()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "depth                NaN\n",
+       "nest_level             7\n",
+       "parent_id     t1_d4quv2y\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "has_depth_trimdf.iloc[0,:]"
+   ]
   },
   {
    "cell_type": "code",
