classifier for child_of_troll? done, auc=0.68, not bad

--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "(array([0]), array([15]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "15"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -540,9 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_fetched': False,\n",
+      " '_reddit': <praw.reddit.Reddit object at 0x7f2d0c3abac0>,\n",
+      " '_replies': [],\n",
+      " '_submission': None,\n",
+      " 'id': 'cqe9a6b'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Reddit's api changed, dict(vars(comment)) only worked after running a ._fetch()\n",
     "# get missing comments from pushshift\n",
@@ -695,16 +707,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cefixa8'"
+       "'d6rnsox'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1686,7 @@
        "[232578 rows x 3 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1687,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1702,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1851,7 @@
        "t3         1.000000  0.000000  1.0  1.0  1.0  1.0   1.0  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1866,14 +1878,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_median_depth_nest_value(df):\n",
+    "def make_normalized_depth(df, norm_depth='norm_depth'):\n",
     "    '''\n",
     "    if depth is not null, use it\n",
     "    else if nest_level is not null use (nest_level-1)\n",
     "    else use np.na\n",
     "    \n",
-    "    returns df plus \n",
+    "    adds to df a column (norm_depth by default)\n",
     "    '''\n",
+    "    # assume the default column names for now\n",
+    "    nest_level = 'nest_level'\n",
+    "    depth = 'depth'\n",
+    "    norm_nest_level = np.where(df[nest_level].isna().index\n",
+    "    df[norm_depth] = pd.Series(\n",
+    "            \n",
+    "        )\n",
+    "    \n",
     "\n",
     "def combine_nestlevel_depth_fillna(series):\n",
     "    '''\n",
@@ -1910,10 +1930,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "index expected at least 1 argument, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-7d6427784b66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'nest_level'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: index expected at least 1 argument, got 0"
+     ]
+    }
+   ],
+   "source": [
+    "np.where(comms['nest_level'].isna()).index()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comms.index()"
+   ]
   }
  ],
  "metadata": {
