--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -770,6 +770,7 @@
     "  - permalink\n",
     "* one-hot encode the subreddit to add to the tfidf\n",
     "* add user activity profile to the tfidf\n",
+    "* inspect models for most important features\n",
     "* start with id, (comment)\n",
     "  - is the comment trollish? proba > threshold\n",
     "  - if yes, then \n",
@@ -1816,13 +1817,6 @@
     "with open(filename, 'wb') as fp:\n",
     "    pickle.dump(brf, fp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
