comments on where to go next w/r/t user_age

--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -2012,11 +2012,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Yay! awww, that's leakage...but it gives me the next direction for the project. Make a flask app that accepts a comment, then peruses the subreddit over some period of time for a spike in user_age. You might not find a spike, but you could use it as labeled data"
+   ]
   },
   {
    "cell_type": "code",
