--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,8 @@
     "#### so, let's recap the tomfoolery between praw and psaw\n",
     "0) psaw returns comments from trolls, praw does not ... true? FALSE, psaw doesn't give results when parent_id is from a troll\n",
     "1) psaw returns nothing when searching on threads with comments from trolls ... true? mostly. I believe it's not 100%, but e.g. https://api.pushshift.io/reddit/submission/comment_ids/4rdu5x returns []\n",
-    "2) re: 1, reddit does, but does not include any responses to the trolls ... true?"
+    "2) re: 1, reddit does, but does not include any responses to the trolls ... true?\n",
+    "3) 'author' for authors 'NotFound' by author_fullname (fail with PRAW) may be recovered by searching on the comment 'id' at PSAW"
    ]
   },
   {
@@ -768,6 +769,7 @@
     "  - do we have all comments multiple levels below troll comments?\n",
     "  - authors, subreddits, link- and comment-karma\n",
     "  - permalink\n",
+    "* convert author_fullname to author\n",
     "* one-hot encode the subreddit to add to the tfidf\n",
     "* add user activity profile to the tfidf\n",
     "* inspect models for most important features\n",
@@ -1774,7 +1776,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1983,7 +1985,7 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2006,7 +2008,6 @@
     }
    ],
    "source": [
-    "# using the depth added about 5% to auc\n",
     "fig, ax = plt.subplots(1, figsize=(6, 5))\n",
     "plot_roc_nofit(ax, Xcsdu_test, y_test, brf, 'troll_brf')"
    ]
@@ -2015,7 +2016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Yay! awww, that's leakage...but it gives me the next direction for the project. Make a flask app that accepts a comment, then peruses the subreddit over some period of time for a spike in user_age. You might not find a spike, but you could use it as labeled data"
+    "### Yay! awww, that's leakage...but it gives me future directions for the project."
    ]
   },
   {
@@ -2172,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,11 +2182,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'all_awardings': [],\n",
+       "  'approved_at_utc': None,\n",
+       "  'associated_award': None,\n",
+       "  'author': 'Nhosis',\n",
+       "  'author_flair_background_color': None,\n",
+       "  'author_flair_css_class': None,\n",
+       "  'author_flair_richtext': [],\n",
+       "  'author_flair_template_id': None,\n",
+       "  'author_flair_text': None,\n",
+       "  'author_flair_text_color': None,\n",
+       "  'author_flair_type': 'text',\n",
+       "  'author_fullname': 't2_123f06mc',\n",
+       "  'author_patreon_flair': False,\n",
+       "  'author_premium': False,\n",
+       "  'awarders': [],\n",
+       "  'banned_at_utc': None,\n",
+       "  'body': 'Ok now I gotta blow 15k xes on the sword skin man F this game.',\n",
+       "  'can_mod_post': False,\n",
+       "  'collapsed': False,\n",
+       "  'collapsed_because_crowd_control': None,\n",
+       "  'collapsed_reason': None,\n",
+       "  'created_utc': 1591297638,\n",
+       "  'distinguished': None,\n",
+       "  'edited': False,\n",
+       "  'gildings': {},\n",
+       "  'id': 'fsw2nsa',\n",
+       "  'is_submitter': False,\n",
+       "  'link_id': 't3_gwmk2v',\n",
+       "  'locked': False,\n",
+       "  'no_follow': True,\n",
+       "  'parent_id': 't3_gwmk2v',\n",
+       "  'permalink': '/r/ExosHeroes/comments/gwmk2v/full_art_zeon/fsw2nsa/',\n",
+       "  'retrieved_on': 1591302425,\n",
+       "  'score': 2,\n",
+       "  'send_replies': True,\n",
+       "  'stickied': False,\n",
+       "  'subreddit': 'ExosHeroes',\n",
+       "  'subreddit_id': 't5_yxtw6',\n",
+       "  'top_awarded_type': None,\n",
+       "  'total_awards_received': 0,\n",
+       "  'treatment_tags': [],\n",
+       "  'created': 1591297638.0},\n",
+       " {'all_awardings': [],\n",
+       "  'approved_at_utc': None,\n",
+       "  'associated_award': None,\n",
+       "  'author': 'Barakuda9',\n",
+       "  'author_flair_background_color': None,\n",
+       "  'author_flair_css_class': None,\n",
+       "  'author_flair_richtext': [],\n",
+       "  'author_flair_template_id': None,\n",
+       "  'author_flair_text': None,\n",
+       "  'author_flair_text_color': None,\n",
+       "  'author_flair_type': 'text',\n",
+       "  'author_fullname': 't2_69h9c83x',\n",
+       "  'author_patreon_flair': False,\n",
+       "  'author_premium': False,\n",
+       "  'awarders': [],\n",
+       "  'banned_at_utc': None,\n",
+       "  'body': 'Thanks! Im checking it right now',\n",
+       "  'can_mod_post': False,\n",
+       "  'collapsed': False,\n",
+       "  'collapsed_because_crowd_control': None,\n",
+       "  'collapsed_reason': None,\n",
+       "  'created_utc': 1591297638,\n",
+       "  'distinguished': None,\n",
+       "  'edited': False,\n",
+       "  'gildings': {},\n",
+       "  'id': 'fsw2nse',\n",
+       "  'is_submitter': True,\n",
+       "  'link_id': 't3_gwkret',\n",
+       "  'locked': False,\n",
+       "  'no_follow': True,\n",
+       "  'parent_id': 't1_fsvpqn2',\n",
+       "  'permalink': '/r/flashlight/comments/gwkret/searching_for_a_humble_searchlight/fsw2nse/',\n",
+       "  'retrieved_on': 1591302425,\n",
+       "  'score': 1,\n",
+       "  'send_replies': True,\n",
+       "  'stickied': False,\n",
+       "  'subreddit': 'flashlight',\n",
+       "  'subreddit_id': 't5_2qjmy',\n",
+       "  'top_awarded_type': None,\n",
+       "  'total_awards_received': 0,\n",
+       "  'treatment_tags': [],\n",
+       "  'created': 1591297638.0})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gen = api.search_comments(id='cax4ng0,cax1t9x')\n",
     "next(gen).d_, next(gen).d_"
@@ -2212,10 +2307,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reddit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-f6484bf90ad6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreddit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mredditors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m't2_100267,t2_100298'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reddit' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gen = reddit.redditors.search('t2_100267,t2_100298')\n",
+    "next(gen), next(gen)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2382,26 +2492,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'comment': Counter({'IAmA': 664,\n",
+       "          'space': 615,\n",
+       "          'askscience': 395,\n",
+       "          'history': 53,\n",
+       "          'nasa': 3,\n",
+       "          'AnimalCrossing': 2,\n",
+       "          'ExposurePorn': 1,\n",
+       "          'Mars': 1,\n",
+       "          'OldSchoolCool': 1,\n",
+       "          'news': 1,\n",
+       "          'pics': 1,\n",
+       "          'reddit.com': 1,\n",
+       "          'spacex': 1}),\n",
+       " 'submission': Counter({'u_nasa': 87,\n",
+       "          'space': 27,\n",
+       "          'IAmA': 11,\n",
+       "          'nasa': 3,\n",
+       "          'TropicalWeather': 2,\n",
+       "          'history': 2,\n",
+       "          'science': 2,\n",
+       "          'Astronomy': 1,\n",
+       "          'ISS': 1,\n",
+       "          'Mars': 1,\n",
+       "          'OldSchoolCool': 1,\n",
+       "          'reddit.com': 1})}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "    outcols = df.columns + ['comm_type']\n",
-    "    # allow for extra columns after depth, nest_level, and parent_id\n",
-    "    if list(df.columns)[:3] != ['depth', 'nest_level', 'parent_id']:\n",
-    "        raise\n",
-    "    outdf = pd.DataFrame(np.hstack([\n",
-    "        df.values, \n",
-    "        np.array([\n",
-    "            x.split('_')[0] for x in df['parent_id'].values\n",
-    "        ])\n",
-    "        .reshape(-1, 1)\n",
-    "    ]), columns=outcols)\n",
-    "    outdf['depth'] = outdf['depth'].astype(float)\n",
-    "    outdf['nest_level'] = outdf['nest_level'].astype(float)\n",
-    "    if 'troll?' in outcols:\n",
-    "        outdf['troll?'] = outdf['troll?'].astype(int)\n",
-    "    return outdf"
+    "api.redditor_subreddit_activity('nasa')"
    ]
   },
   {
@@ -2415,42 +2545,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         d4qvapg\n",
+       "1         d4quowa\n",
+       "2         d4queet\n",
+       "3         d4qu1y2\n",
+       "4         d45sina\n",
+       "           ...   \n",
+       "234003    d13dnrm\n",
+       "234004    d10kcdh\n",
+       "234005    d0zq68q\n",
+       "234006    crdrlcy\n",
+       "234007    crcbzrx\n",
+       "Name: id, Length: 234008, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comms['id']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-492c4bba2b96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mgen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch_comments\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlink_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'd13dnrm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "gen = api.search_comments(link_id='d13dnrm')\n",
+    "next(gen).d_, next(gen).d_"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reset the training and test data, just in case\n",
-    "X_train_corp, X_test_corp, y_train, y_test = train_test_split(\n",
-    "        corpus, comms['child_of_troll?'], test_size=0.2, random_state=30, shuffle=True)\n",
-    "\n",
-    "n_features = 5000\n",
-    "\n",
-    "tfidf_vectorizer = TfidfVectorizer(max_df=0.95, min_df=2,\n",
-    "                                   max_features=n_features,\n",
-    "                                   stop_words='english')\n",
-    "\n",
-    "t0 = time.time()\n",
-    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train_corp)\n",
-    "print(\"done in %0.3fs.\" % (time.time() - t0))\n",
-    "\n",
-    "X_test_tfidf = tfidf_vectorizer.transform(X_test_corp)\n",
-    "\n",
-    "X_train = X_train_tfidf.toarray()\n",
-    "X_test = X_test_tfidf.toarray()"
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'approved_at_utc': None,\n",
+       "  'author': 'Skrt__Skrt',\n",
+       "  'author_flair_css_class': None,\n",
+       "  'author_flair_text': None,\n",
+       "  'banned_at_utc': None,\n",
+       "  'body': 'CNN just showed video of the police on TV, right ater saying dont share anything on social media',\n",
+       "  'can_mod_post': False,\n",
+       "  'collapsed': False,\n",
+       "  'collapsed_reason': None,\n",
+       "  'created_utc': 1502988145,\n",
+       "  'distinguished': None,\n",
+       "  'edited': False,\n",
+       "  'id': 'dlrawgw',\n",
+       "  'is_submitter': False,\n",
+       "  'link_id': 't3_6uanuh',\n",
+       "  'parent_id': 't3_6uanuh',\n",
+       "  'retrieved_on': 1502988146,\n",
+       "  'score': 1,\n",
+       "  'stickied': False,\n",
+       "  'subreddit': 'worldnews',\n",
+       "  'subreddit_id': 't5_2qh13'},\n",
+       " {'approved_at_utc': None,\n",
+       "  'author': 'TheKomuso',\n",
+       "  'author_flair_css_class': None,\n",
+       "  'author_flair_text': None,\n",
+       "  'banned_at_utc': None,\n",
+       "  'body': \"The worst part is there's no discussion about this that leads to any kind of solution.  People are afraid to be openly critical for being called phobic and having their career in jeopardy.\",\n",
+       "  'can_mod_post': False,\n",
+       "  'collapsed': False,\n",
+       "  'collapsed_reason': None,\n",
+       "  'created_utc': 1502992318,\n",
+       "  'distinguished': None,\n",
+       "  'edited': False,\n",
+       "  'id': 'dlrezc8',\n",
+       "  'is_submitter': False,\n",
+       "  'link_id': 't3_6uanuh',\n",
+       "  'parent_id': 't1_dlr6psw',\n",
+       "  'retrieved_on': 1502992320,\n",
+       "  'score': 1,\n",
+       "  'stickied': False,\n",
+       "  'subreddit': 'worldnews',\n",
+       "  'subreddit_id': 't5_2qh13'},\n",
+       " {'approved_at_utc': None,\n",
+       "  'author': 'PrinceHumperTinkTink',\n",
+       "  'author_flair_css_class': None,\n",
+       "  'author_flair_text': None,\n",
+       "  'banned_at_utc': None,\n",
+       "  'body': 'CNN has a track record for pulling that shit. Did the same thing for the Boston Marathon incident.',\n",
+       "  'can_mod_post': False,\n",
+       "  'collapsed': False,\n",
+       "  'collapsed_reason': None,\n",
+       "  'created_utc': 1502994700,\n",
+       "  'distinguished': None,\n",
+       "  'edited': False,\n",
+       "  'id': 'dlrhbkq',\n",
+       "  'is_submitter': False,\n",
+       "  'link_id': 't3_6uanuh',\n",
+       "  'parent_id': 't1_dlrawgw',\n",
+       "  'retrieved_on': 1502994701,\n",
+       "  'score': 1,\n",
+       "  'stickied': False,\n",
+       "  'subreddit': 'worldnews',\n",
+       "  'subreddit_id': 't5_2qh13'}]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this works (ids on github docs for psaw -- https://github.com/pushshift/api) ...\n",
+    "request = requests.get('https://api.pushshift.io/reddit/comment/search', params={'ids': 'dlrezc8,dlrawgw,dlrhbkq'})\n",
+    "# [x['author'] for x in loads(request.content)['data']]\n",
+    "[x for x in loads(request.content)['data']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ... but this don't (id from my dataset)\n",
+    "request = requests.get('https://api.pushshift.io/reddit/comment/search', params={'ids': 'd13dnrm'})\n",
+    "[x['author'] for x in loads(request.content)['data']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try author_fullname (id from my dataset)\n",
+    "request = requests.get('https://api.pushshift.io/reddit/comment/search', params={'ids': 'd13dnrm'})\n",
+    "[x['author'] for x in loads(request.content)['data']]"
    ]
   }
  ],
