parallelize the search for authors by author_fullname via praw...code works but getting blocked

--- a/get_all_user_activity.ipynb
+++ b/get_all_user_activity.ipynb
@@ -778,12 +778,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('data/unique_author_fullname', 'w') as fp:\n",
-    "    fp.write('\\n'.join(unique_author_fullname) + '\\n')"
+    "    fp.write('\\n'.join(unique_author_fullname))"
    ]
   },
   {
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
      "output_type": "stream",
      "text": [
       "submission    :  14523\n",
-      "author        :   1029\n",
+      "author        :   3724\n",
       "first_and_last:    964\n",
       "comment       : 234008\n"
      ]
