scoped child_of_troll expanded to include top-level replies to submissions by trolls

--- a/diffuse_child_of_troll_to_parent_to_classify.ipynb
+++ b/diffuse_child_of_troll_to_parent_to_classify.ipynb
@@ -202,6 +202,7 @@
    ],
    "source": [
     "# is this comment in reply to a troll?\n",
+    "# TODO: expand the notion of a reply to troll by including top-level comments directly responding to posts by trolls\n",
     "comms['child_of_troll?'] = [int(mybool) for mybool in [\n",
     "                    pid.split('_')[1] in troll_comment_ids_set for pid in comms['parent_id']\n",
     "                    ]]\n",
@@ -1185,7 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### next engineer the `child_of_troll_reply?` and `num_replies` features\n",
+    "### next engineer the `child_suggests_troll?` and `num_replies` features\n",
     "First, just make this `1` if any of its replies have `child_of_troll? == 1`"
    ]
   },
@@ -1294,43 +1295,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_grouped_parent_id_comms = comms.groupby('parent_id')['body'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_reply_counts = dict(zip(count_grouped_parent_id_comms.index, count_grouped_parent_id_comms.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "parent_id\n",
-       "t1_c4dno1t      1\n",
-       "t1_c557xcn      1\n",
-       "t1_c55cs4v      1\n",
-       "t1_c5dwn1i      1\n",
-       "t1_c5dwrdv      1\n",
-       "             ... \n",
-       "t3_yqtf7      103\n",
-       "t3_zch9r        8\n",
-       "t3_zcsbt        9\n",
-       "t3_zdfu8        4\n",
-       "t3_zgqre       28\n",
-       "Name: body, Length: 8829, dtype: int64"
+       "array([['t1', 'c4dno1t', '1'],\n",
+       "       ['t1', 'c557xcn', '1'],\n",
+       "       ['t1', 'c55cs4v', '1'],\n",
+       "       ...,\n",
+       "       ['t3', 'zcsbt', '9'],\n",
+       "       ['t3', 'zdfu8', '4'],\n",
+       "       ['t3', 'zgqre', '28']], dtype='<U7')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comms.groupby('parent_id')['body'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " = np.array([s.split('_')])"
+    "np.array([k.split('_') + [v] for k, v in parent_reply_counts.items()])"
    ]
   },
   {
