counting number of replies for each parent, noting id and top_level?

--- a/diffuse_child_of_troll_to_parent_to_classify.ipynb
+++ b/diffuse_child_of_troll_to_parent_to_classify.ipynb
@@ -791,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'child_of_troll_brf.pkl'\n",
+    "filename = 'data/saved_models/child_of_troll_brf.pkl'\n",
     "with open(filename, 'wb') as fp:\n",
     "    pickle.dump(clfs['cot_brf'], fp)"
    ]
@@ -809,7 +809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('child_of_troll_brf.pkl', 'rb') as fp:\n",
+    "with open('data/saved_models/child_of_troll_brf.pkl', 'rb') as fp:\n",
     "    new_brf = pickle.load(fp)"
    ]
   },
@@ -1313,36 +1313,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['t1', 'c4dno1t', '1'],\n",
-       "       ['t1', 'c557xcn', '1'],\n",
-       "       ['t1', 'c55cs4v', '1'],\n",
-       "       ...,\n",
-       "       ['t3', 'zcsbt', '9'],\n",
-       "       ['t3', 'zdfu8', '4'],\n",
-       "       ['t3', 'zgqre', '28']], dtype='<U7')"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array([k.split('_') + [v] for k, v in parent_reply_counts.items()])"
+    "np_parent_reply_counts = np.array([k.split('_') + [v] for k, v in parent_reply_counts.items()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "top_level = np.where(np_parent_reply_counts[:,0]=='t3', np.ones(len(np_parent_reply_counts)), np.zeros(len(np_parent_reply_counts)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toplevel_parent_reply_counts = np.hstack([np_parent_reply_counts, top_level.reshape(-1,1).astype(int)])"
+   ]
   },
   {
    "cell_type": "code",
