predict child_of_troll on entire dataset as if it were new, count per parent_id

--- a/diffuse_child_of_troll_to_parent_to_classify.ipynb
+++ b/diffuse_child_of_troll_to_parent_to_classify.ipynb
@@ -1317,6 +1317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# numpy array with top_level code (t1 or t3), parent_id, and count\n",
     "np_parent_reply_counts = np.array([k.split('_') + [v] for k, v in parent_reply_counts.items()])"
    ]
   },
@@ -1326,17 +1327,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# one-hot encode 'top_level?''\n",
     "top_level = np.where(np_parent_reply_counts[:,0]=='t3', np.ones(len(np_parent_reply_counts)), np.zeros(len(np_parent_reply_counts)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "toplevel_parent_reply_counts = np.hstack([np_parent_reply_counts, top_level.reshape(-1,1).astype(int)])"
+    "# TODO: make the following few cells a pre-processing function\n",
+    "# now treat the entire corpus as new data\n",
+    "X_corp = corpus"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done in 3.359s.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: encapsulate this into a pre-processing function ...\n",
+    "t0 = time.time()\n",
+    "X_tfidf = tfidf_vectorizer.transform(X_corp)\n",
+    "print(\"done in %0.3fs.\" % (time.time() - t0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: encapsulate this into a pre-processing function ...\n",
+    "X = X_tfidf.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: encapsulate this into a pre-processing function ...\n",
+    "# add the extra features ...\n",
+    "Xcsd = np.hstack([X, comms[['controversiality', 'score', 'norm_depth']].fillna(0).values])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### make predictions for `child_of_troll?`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get child_of_troll? model predictions for entire dataset\n",
+    "with open('data/saved_models/child_of_troll_brf.pkl', 'rb') as fp:\n",
+    "    brf = pickle.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this makes 18,663 predicted child of troll comments\n",
+    "comms['child_of_troll?_pred'] = brf.predict(Xcsd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count the number of child_of_troll predictions for each parent_id\n",
+    "parent_pred_num_child_of_troll = comms.groupby('parent_id')['child_of_troll?_pred'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "parent_id\n",
+       "t1_c4dno1t     1\n",
+       "t1_c557xcn     0\n",
+       "t1_c55cs4v     1\n",
+       "t1_c5dwn1i     0\n",
+       "t1_c5dwrdv     1\n",
+       "              ..\n",
+       "t3_yqtf7      24\n",
+       "t3_zch9r       0\n",
+       "t3_zcsbt       0\n",
+       "t3_zdfu8       0\n",
+       "t3_zgqre       3\n",
+       "Name: child_of_troll?_pred, Length: 8829, dtype: int64"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parent_pred_num_child_of_troll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['t13', 'id', 'num_replies', 'top_level?']\n",
+    "toplevel_parent_reply_counts_df = pd.DataFrame(\n",
+    "                np.hstack(\n",
+    "                    [np_parent_reply_counts, \n",
+    "                     top_level.reshape(-1,1).astype(int)\n",
+    "                    ]),\n",
+    "                columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
