exploring confusion matrix

--- a/diffuse_child_of_troll_to_parent_to_classify.ipynb
+++ b/diffuse_child_of_troll_to_parent_to_classify.ipynb
@@ -1788,7 +1788,7 @@
     }
    ],
    "source": [
-    "corpus_ordered_num_replies_num_pred_child_of_troll.head()"
+    "corpus_ordered_num_replies_num_pred_child_of_troll"
    ]
   },
   {
@@ -1886,7 +1886,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  788,  5870],\n",
+       "       [  528, 39616]])"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standard_confusion_matrix(y_test, y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1316"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1907,9 +1948,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 204,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1933,16 +1974,37 @@
    ],
    "source": [
     "# 0.77 is the number to beat ... 0.83, yay!\n",
+    "# state of the art is arguably 0.85 ...\n",
+    "# http://web.stanford.edu/class/cs224n/reports/custom/15739845.pdf\n",
+    "# and that effort used transfer learning and Bert instead of tfidf\n",
     "fig, ax = plt.subplots(1, figsize=(6, 5))\n",
     "plot_roc_nofit(ax, Xcsdt_test, y_test, brf, 'troll_brf')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pickle this model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filename = 'data/saved_models/troll_with_replies_brf.pkl'\n",
+    "with open(filename, 'wb') as fp:\n",
+    "    pickle.dump(brf, fp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### inspect the models"
+   ]
   },
   {
    "cell_type": "code",
