--- a/unique_authors_in_comments.ipynb
+++ b/unique_authors_in_comments.ipynb
@@ -773,6 +773,8 @@
     "    * author activity profile is really nice but requires the common name\n",
     "  - permalink (this is a data luxury, low priority)\n",
     "\n",
+    "* EDA\n",
+    "  - show the fields of interest, and which are null ( low priority )\n",
     "* one-hot encode the subreddit to add to the tfidf\n",
     "* add user activity profile to the tfidf\n",
     "* inspect models for most important features\n",
