include link to troll horde image

--- a/notebooks/README.ipynb
+++ b/notebooks/README.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "* confirm the model works well in conversations without troll activity\n",
     "\n",
-    "One of my favorite parts of this dataset is [a casualiAMA by the trolls themselves](https://www.reddit.com/r/casualiama/comments/7m1hht/we_are_russian_trolls_ask_us_anything/), complete with self-portraits!\n",
+    "One of my favorite parts of this dataset is [a casualiAMA by the trolls themselves](https://www.reddit.com/r/casualiama/comments/7m1hht/we_are_russian_trolls_ask_us_anything/), complete with [self-portraits](img/russian_troll_horde.png)!\n",
     "\n",
     "Thank you so much for your interest!"
    ]
